UXPLATFORM-10055 Fixed Whitespace issue in large menu

--- a/packages/terra-hookshot/src/HookshotContent.module.scss
+++ b/packages/terra-hookshot/src/HookshotContent.module.scss
@@ -9,5 +9,8 @@
       top: 0;
       z-index: 7001;
     }
+    .fixed-position {
+      position: fixed;
+    }
   }
 }
